# AdventOfCode2020

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
docs/: index.html
docs/pkg/: README.md  adventofcode2020.d.ts  adventofcode2020.js  adventofcode2020_bg.wasm  adventofcode2020_bg.wasm.d.ts  package.json
golf/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day12.py
input/: day01_hard.txt  day07_hard.txt
pkg/: README.md  adventofcode2020.d.ts  adventofcode2020.js  adventofcode2020_bg.js  adventofcode2020_bg.wasm  adventofcode2020_bg.wasm.d.ts
src/: common.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
