[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Maks Kolman <kolman.maks@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-pack = "0.9.1"

[dependencies]
wasm-bindgen = "0.2.63"


[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
